--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid" >
     <div class="row"><div class="col-12 text-center p-0">
-        <img src="./images/map.jpg" alt="" title="" style="width:100%;" />
+        <!-- <img src="./images/map.jpg" alt="" title="" style="width:100%;" /> -->
+         <h1>HI Everyone</h1>
     </div></div>
 </div>
