--- a/src/app/components/partials/navigation/navigation.component.html
+++ b/src/app/components/partials/navigation/navigation.component.html
@@ -11,7 +11,7 @@
                 </ul>
             </div>
             <div class="text-end col-12 col-sm-6 logo-area" >
-                Cloud Computing Project
+                Cloud Computing Project 123
             </div>
         </div>
     </div>
